--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
         "test:html": "html-validate src/*.html",
         "test:js": "eslint --fix src/js/",
         "test:scss": "stylelint --fix src/sass/",
-        "server": "json-server --port 3131 --no-cors --delay 250 --watch dist/db/app.json",
         "build": "npm-run-all build:* test",
         "build:clean": "rimraf dist && mkdirp dist",
         "build:copy": "copyfiles -a -u 1 -e \"**/sass/**/*\" -e \"**/.gitkeep\" \"src/**/*\" dist",
@@ -22,7 +21,7 @@
         "build:autoprefixer": "postcss dist/css/*.css --use autoprefixer -d dist/css",
         "build-dev": "npm-run-all build-dev:sass build:autoprefixer",
         "build-dev:sass": "sass src/sass:dist/css",
-        "watch": "npm-run-all build build-dev -p watch:* server",
+        "watch": "npm-run-all build build-dev -p watch:*",
         "watch:browsersync": "browser-sync start --server dist --files \"dist/**/*\"",
         "watch:sassprefixer": "onchange \"src/sass/**/*.scss\" -- npm run build-dev",
         "watch:copy": "onchange -e \"**/sass/**/*\" -e \"**/.gitkeep\" \"src/**/*\" -- copyfiles -a -u 1 {{changed}} dist"
